# aula08_bootcamp

./: dados.parquet  etl.py  pyproject.toml
src/: etl.py  pipeline.py  utils_log.py
