[project]
name = "aula06"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Henrique",email = "dudugama03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
